  mother standing near her baby will still be standing near her baby post.
  Part of #1069

--Apocalypse now clears Eve location and several other things.  Fixes #1077

--During soft-shutdown, if all players die of old age, and the only players
  left are ghosts, the ghosts are now force-killed.  Otherwise, remaining
  ghosts could delay server shutdown indefinitely.  Fixes #1030


Server Fixes:

--Fixed protocol document to specify zlib and not zip compression for map
  chunks and CM messages.  Fixes #1032




Version 425   2024-May-10

--PLANET settings page now allows you to specify your PayPal email address,
  which will be used for delivering your revshare for content you contribute
  to AHAP.

--ahapTechTreeURL changed to ahap.info    Fixes #1065

--Ctrl-c in-game now copies recent speech log, from past 30 seconds, to system
  clipboard.  This will help non-English-speaking users who are trying to paste
  speech into translation services.  Fixes #1029

--Added a lot more logging around required version numbers when PLEASE UPGRADE
  error pages are shown.

--Fixed so that Object Editor doesn't allow baking of non-90 rotated sprites
  (which were being rounded, by surprise, to closest 90-degree rotation).
  It now shows a message explaining why the bake cannot occur.  Fixes #1070

--Slider for simulating uses in Object Editor now works the same way as slider
  in Scene editor.  Fixes #1073

--Fixed bug that was causing author= line in transition files to get
  interpreted as comment if transition had no comment, resulting in
  duplication of author= line when transition was saved again.  Fixes #1071

--When using import_replace folder, if an object ID doesn't exist, the next
  object ID is used instead of inflating the local object ID space by
  force-inserting an ID.  Fixes #1072

--Fixed glitch in rolling back object ID and sprite ID when deleting last item
  in bank (to prevent ID inflation).





Server Fixes:
